[package]

name = "gunship"
version = "0.0.1"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[lib]
name = "gunship"

[features]
timing = []
hotloading = []

[dependencies]
bootstrap_rs    = { path = "lib/bootstrap_rs" }
bootstrap_audio = { path = "lib/bootstrap_audio" }
hash            = { path = "lib/hash" }
parse_collada   = { path = "lib/parse_collada" }
polygon         = { path = "lib/polygon_rs" }
polygon_math    = { path = "lib/polygon_math" }
stopwatch       = { path = "lib/stopwatch" }

[dev_dependencies]
rand = "*"

[profile.release]
lto = true

[profile.bench]
lto = true

[[example]]
name = "create_destroy"
path = "examples/benchmarks/create_destroy.rs"

[[example]]
name = "circle_movement"
path = "examples/benchmarks/circle_movement.rs"

[[example]]
name = "circle_collision"
path = "examples/benchmarks/circle_collision.rs"
