[package]

name = "gunship"
version = "0.0.4"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[lib]
name = "gunship"

[features]
timing = []
hotloading = []
no-draw = []

[dependencies]
bootstrap_rs = { path = "lib/bootstrap_rs" }
bootstrap_audio = { path = "lib/bootstrap_audio" }
fiber = { version = "0.1", path = "lib/fiber" }
hash = { path = "lib/hash" }
lazy_static = "0.2.1"
parse_collada = { path = "lib/parse_collada" }
parse-obj = { version = "0.1", path = "lib/parse-obj" }
polygon = { path = "lib/polygon_rs" }
polygon_math = { path = "lib/polygon_math" }
stopwatch = { path = "lib/stopwatch" }

[dev_dependencies]
rand = "*"

# [[example]]
# name = "create_destroy"
# path = "examples/benchmarks/create_destroy.rs"
#
# [[example]]
# name = "circle_movement"
# path = "examples/benchmarks/circle_movement.rs"
#
# [[example]]
# name = "circle_collision"
# path = "examples/benchmarks/circle_collision.rs"
