[package]

name = "gunship"
version = "0.1.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[features]
timing = []
no-draw = []

[dependencies]
bootstrap_rs = { path = "lib/bootstrap_rs" }
bootstrap_audio = { path = "lib/bootstrap_audio" }
cell-extras = { git = "https://github.com/excaliburHisSheath/cell-extras" }
fiber = { version = "0.1", path = "lib/fiber" }
hash = { path = "lib/hash" }
lazy_static = "0.2.1"
parse_collada = { path = "lib/parse_collada" }
parse-obj = { version = "0.1", path = "lib/parse-obj" }
polygon = { path = "lib/polygon_rs" }
polygon_math = { path = "lib/polygon_math" }
stopwatch = { path = "lib/stopwatch" }

[dev_dependencies]
rand = "*"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test ]
panic = "abort"

[profile.bench]
panic = "abort"

[profile.doc]
panic = "abort"
