[package]
name = "bootstrap_rs"
version = "0.0.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]
build = "build.rs"

[dependencies]
winapi = "*"
user32-sys = "*"
kernel32-sys = "*"
winmm-sys = "*"
# xinput-sys = "*"

# Begin macos dependencies.
# TODO: Somehow make these dependencies only when compiling for macos.
objc = "*"
cocoa = "*"
core-graphics = "*"
core-foundation = "*"

# [dependencies.x11]
# version = "*"
# features = ["glx", "xlib"]
