[package]
name = "bootstrap_rs"
version = "0.0.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]
build = "build.rs"

[dependencies]
winapi = "*"
user32-sys = "*"
kernel32-sys = "*"
winmm-sys = "*"
# xinput-sys = "*"

# Begin macos dependencies.
# TODO: Somehow make these dependencies only when compiling for macos. This
# requires RFC 1361 to be implemented: https://github.com/rust-lang/rfcs/pull/1361
objc = "0.2"
cocoa = "0.3"
core-graphics = "0.3"
core-foundation = "0.2"

# [dependencies.x11]
# version = "*"
# features = ["glx", "xlib"]
