[package]
name = "bootstrap_rs"
version = "0.0.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]
build = "build.rs"

[dependencies]
cell-extras = { git = "https://github.com/excaliburHisSheath/cell-extras" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "*"
user32-sys = "*"
kernel32-sys = "*"
winmm-sys = "*"
gdi32-sys = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = { git = "https://github.com/excaliburHisSheath/cocoa-rs" }
core-graphics = "0.3"
core-foundation = "0.2"

# [dependencies.x11]
# version = "*"
# features = ["glx", "xlib"]
