[package]

name = "gl-util"
version = "0.1.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[dependencies]
bootstrap-gl = { version = "0.1", path = "../bootstrap-gl" }

[dev_dependencies]
bootstrap_rs = { version = "0.0", path = "../bootstrap_rs" }
parse-obj = { version = "0.1", path = "../parse-obj" }
