[package]

name = "polygon"
version = "0.0.2"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[dependencies]
gl-util = { version = "0.1", path = "../gl-util" }
parse-bmp = { version = "0.1", path = "../parse-bmp" }
polygon_math = { version = "*", path = "../polygon_math" }

[dev_dependencies]
bootstrap_rs = { version = "*", path = "../bootstrap_rs" }
parse-obj = { version = "0.1", path = "../parse-obj" }
