[package]

name = "polygon"
version = "0.0.2"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[dependencies]
bootstrap_rs = { version = "0.0", path = "../bootstrap_rs" }
gl-util = { version = "0.1", path = "../gl-util" }
parse-bmp = { version = "0.1", path = "../parse-bmp" }
polygon_math = { version = "0.1", path = "../polygon_math" }
polygon_material = { version = "0.1", path = "../polygon-material" }
stopwatch = { path = "../stopwatch" }

[dev_dependencies]
parse-obj = { version = "0.1", path = "../parse-obj" }
