[package]

name = "stopwatch"
version = "0.0.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[dependencies]
bootstrap_rs = { path = "../bootstrap_rs" }
fiber = { path = "../fiber" }
cell-extras = { git = "https://github.com/excaliburHisSheath/cell-extras" }
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
kernel32-sys = "0.2.2"
